<resources>
    <string name="app_name">Praankavatch</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCBSo14poHZcrNJ_L5MYGQa_KN9zAfikb4
    </string>

    <string name="sometingWentWrong">something went wrong! please try again</string>

    <string name="signInToCont">Sign in to continue</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="Phone">Phone</string>
    <string name="signin">Sign in →</string>
    <string name="donthaveanaccount">Don’t have an account?</string>
    <string name="singforfree">Sign up for free →</string>
    <string name="errorPhone">invalid phone number!</string>
    <string name="error_password">invalid password!</string>

    <string name="allfileds_mandet">All fields are required!</string>

    <string name="signUp">Sign up</string>
    <string name="fullname">Your Full Name</string>
    <string name="dob">Date of Birth</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="currentLocation">Use current location?</string>
    <string name="email">Email</string>
    <string name="signuup">Sign up →</string>
    <string name="haveAccount"> Already have an account?</string>


    <string name="dev_on_location_title">Location is turned off!</string>
    <string name="dev_on_location_message">Android phones require Location enabled in order to syc device location.
		click the button below to enable Location.</string>
    <string name="dev_guide_location_action">Enable</string>
    <string name="cancel">Cancel</string>

    <string name="need_access_location_title">Device Location Required</string>
    <string name="need_access_location_message">Application need permission to use your location</string>
    <string name="allow_btn">Allow</string>

    <string name="no_geocoder_available">No geocoder available</string>
    <string name="no_location_data_provided">No location data provided</string>

    <string name="yourLoc">You are in</string>

    <string name="hotoSpots">Corona \nHotspots</string>
    <string name="isItTrue">Are you diagnosed with COVID-19?</string>

    <string name="areyoytestedPositive">Tested positive?</string>
    <string name="positive_declaration_date">Date of Test?</string>
    <string name="is_discharged">Are you Discharged?</string>
    <string name="discharge_date">Date of Discharge?</string>
    <string name="save">Save</string>
    <string name="markMyself">Mark my self →</string>

    <string name="qr_btn">Mutual Authentication</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="barcode_reader">QrCode Reader</string>
    <string name="app_needs_your_camera_permission_in_order_to_scan_qr_code">App needs your camera permission in order to scan qr code.</string>
    <string name="scanned_qr_code_result">Scanned Qr Code result</string>

</resources>
