<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootCovid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_20dp"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
    tools:context=".ui.join.JoinPhoneActivity"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/action_backBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_back"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_covid"
        android:layout_marginBottom="@dimen/fab_margin"/>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/StyleTextView_17_wrap_bild"
        android:layout_width="match_parent"
        android:text="@string/isItTrue" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@drawable/bg_edittext">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/testREsultLabel"
            style="@style/StyleTextView_17_wrap"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:gravity="center_vertical"
            android:minHeight="@dimen/height_57"
            android:text="@string/areyoytestedPositive"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/testSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/testREsultLabel"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/positive_declaration_date"
        style="@style/StyleEditTextStandard"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="@string/positive_declaration_date" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:background="@drawable/bg_edittext">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/isDiscahrgedLabel"
            style="@style/StyleTextView_17_wrap"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            android:gravity="center_vertical"
            android:minHeight="@dimen/height_57"
            android:text="@string/is_discharged"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/isDiscahrgedSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/isDiscahrgedLabel"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/discharge_date"
        style="@style/StyleEditTextStandard"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/fab_margin"
        android:hint="@string/discharge_date" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_40dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/covidBtn"
            style="@style/StyleButtonOutlined"
            android:layout_width="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:minHeight="@dimen/size84"
            android:text="@string/save" />

        <ProgressBar
            android:id="@+id/covidProgress"
            style="?android:attr/progressBarStyleSmallInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_atop"
            android:visibility="invisible" />
    </RelativeLayout>

</LinearLayout>

